Fix alignment issue on post grid

--- a/styles/modules/PostGrid.module.scss
+++ b/styles/modules/PostGrid.module.scss
@@ -11,14 +11,10 @@
         grid-gap: $indent__base;
 
         @include min-screen($screen__md) {
-            flex-direction: row;
-            align-items: center;
             grid-template-columns: repeat(2, 1fr);
         }
 
         @include min-screen($screen__lg) {
-            flex-direction: row;
-            align-items: center;
             grid-template-columns: repeat(3, 1fr);
         }
     }
